2004-03-04  Oliver Schirrmeister <oschirr@abm.de>
	* backend/fujitsu.c 
          enabled dropoutcolor for fi4530C

2004-03-03  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/descriptions/unsupported.desc: Updated Plustek section.
	* doc/descriptions-external/genesys.desc: updated list of scanners
	  that should be supported by the genesys backend.

2004-03-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* frontend/saned.c: Added checks for bad handles for
	  SANE_NET_CLOSE and SANE_NET_CANCEL. This is intended to stop
	  saned from segfaulting when a bad handle is used.

2004-03-02  Karl Heinz Kremer <khk@khk.net>

	* backend/epson.c: Added D8 function level for RX-500

2004-03-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/mustek_usb.c backend/mustek_usb_low.c
	  backend/mustek_usb_low.h doc/sane-mustek_usb.man
	  doc/mustek_usb/mustek_usb.CHANGES doc/mustek_usb/mustek_usb.TODO:
	  Added workaround for toggle = data0 chipset bug.
	  Fixes bug #300323.
	* doc/descriptions/unsupported.desc: Added link for HP ScanJet
	  8290. Added Logitec PageScan Color.

2004-03-01  Frank Zago  <fzago at austin dot rr dot com>

	* doc/descriptions-external/genesys.desc: created list of scanners
	  that should be supported by the genesys backend.
	* doc/leo/leo.txt: doc update.

2004-03-01  Karl Heinz Kremer <khk@khk.net>

	* doc/sane-epson.man: Corrected default function level from B5 to B3

2004-02-28  Frank Zago  <fzago at austin dot rr dot com>

	* tools/check-usb-chip.c: Added test for GL646 used in HP scanners.

2004-02-28  Julien Blache <jb@jblache.org>
	* tools/hotplug: added the hotplug script used by the Debian
	package, with a quick README.
	* tools/README: updated to mention the hotplug/ directory.

2004-02-27  Matthew Duggan <stauff1@users.sourceforge.net>

	* backend/canon_pp.c: Add more debug output to help resolve bug #300524

2004-02-22  Henning Meier-Geinitz <henning@meier-geinitz.de>
